@@ -16,7 +16,7 @@
     <ul>
       <li><a href="basic.html">Basic example</a></li>
       <li><a href="graph-types.html">Different graph types</a> and <a href="setting-options.html">setting various options</a></li>
-      <li><a href="turning-series.html">Turning series on/off</a></li>
+      <li><a href="turning-series.html">Turning series on/off</a> and <a href="thresholding.html">thresholding the data</a></li>
       <li><a href="selection.html">Selection support and zooming</a> and <a href="zooming.html">zooming with overview</a></li>
       <li><a href="time.html">Plotting time series</a> and <a href="visitors.html">visitors per day with zooming and weekends</a></li>
       <li><a href="dual-axis.html">Dual axis support</a></li>
